finished amending code order for responsive best practice and fixed image width bug on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -121,7 +121,7 @@ textarea {
    background-color: #000000;
    color: #ffffff;
    font-family: 'Raleway', sans-serif;
-   line-height: 40px;
+   line-height: 2.5em;
    }
 
    a{
@@ -176,14 +176,16 @@ textarea {
    .header{
    display: flex;
    flex-direction: column;
-   justify-content: space-around;
+   justify-content: center;
    }
 
    .logo{
+     display: flex;
      height: 150px;
      width: auto;
      margin: auto;
-   }
+     padding-bottom: 10px;
+    }
 
    /* NAVIGATION */
 
@@ -200,7 +202,7 @@ textarea {
 
    .nav ul li a{
    font-family: 'alpha-echo';
-   font-size: 15px;
+   font-size: 1em;
    text-decoration: none;
    color: inherit;
    padding-right: 25px;
@@ -304,7 +306,7 @@ textarea {
    color: #EF4A10;
    font-size: 10px;
    text-align: center;
-   width: 100%;
+   width: 95%;
    }
 /* ==========================================================================
    Helper classes
@@ -497,13 +499,6 @@ textarea {
 
   /* TABLETS: JOIN IN STYLES */
 
-  #join{
-    background: #000000;
-    color: #ffffff;
-    justify-content: center;
-    padding: 15px;
-  }
-
   #join img{
     max-width: 50%;
   }
@@ -561,6 +556,10 @@ textarea {
     padding-right: 25px;
   }
 
+  .findus img{
+    padding-top: 20px;
+  }
+
   .facebook{
     background-color: #193791;
     display: flex;
@@ -592,6 +591,12 @@ textarea {
   }
 
   /* DESKTOPS NAVIGATION STYLES */
+
+  .nav{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 0;
+  }
 
   .nav ul{
     list-style-type: none;
@@ -664,7 +669,7 @@ textarea {
 
   #about{
     font-family: 'Raleway', sans-serif;
-    padding: 0px;
+    padding: 10px;
   }
 
   #about h1{
@@ -673,15 +678,32 @@ textarea {
   }
 
   #about p{
-    font-size: 20px;
+    font-size: 1.25em;
     font-weight: bold;
+  }
+
+  /* Desktops i-FRAME */
+
+  .video figure{
+  position: relative;
+  padding-bottom: 20%;
+  height: 0;
+  overflow: hidden;
+  width: 40%;
+  }
+
+  .video iframe{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   }
 
   /* DESKTOPS JOIN IN STYLES */
 
   #join{
     background: #ffffff;
-    font-size: 20px;
     padding: 0px;
   }
 
@@ -698,14 +720,20 @@ textarea {
 
   #join p{
     color: #000000;
+    font-size: 1.5em;
     padding-left: 20px;
   }
 
-  .join-img{
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: flex-start;
-    padding: 10px;
+  #join img{
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  padding: 10px;
+  width: auto;
+  }
+
+  .deskhide{
+    display: none;
   }
 }
 
